chore: add debug dependency and integrate debugLogger in nextMcpMiddleware

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "catalog:"
   },
   "dependencies": {
+    "debug": "catalog:",
     "mcp-handler": "catalog:",
     "zod": "catalog:"
   },
