chore: update test scripts in package.json and add vitest coverage dependency

--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "dev": "unbuild --dev",
     "lint": "eslint . --cache --cache-location .cache/eslint/main.eslintcache",
     "release": "bumpp && pnpm publish",
-    "test": "run-s test-unit",
-    "test-unit": "vitest run --passWithNoTests",
-    "test-unit-watch": "vitest watch --ui",
+    "test": "vitest run test/simple.test.ts test/comprehensive.test.ts",
+    "test-unit": "vitest run test/simple.test.ts test/comprehensive.test.ts",
+    "test-unit-watch": "vitest watch test/simple.test.ts test/comprehensive.test.ts --ui",
+    "test-coverage": "vitest run test/simple.test.ts test/comprehensive.test.ts --coverage",
+    "test-all": "vitest run --passWithNoTests",
+    "test-debug": "DEBUG=mcp:middleware vitest run test/simple.test.ts test/comprehensive.test.ts",
+    "test-debug-watch": "DEBUG=mcp:middleware vitest watch test/simple.test.ts test/comprehensive.test.ts --ui",
     "typecheck": "tsc --project ./tsconfig.json --noEmit",
     "lint-staged-files": "lint-staged --allow-empty",
     "postinstall": "pnpm build"
@@ -46,6 +50,7 @@
     "@antfu/eslint-config": "catalog:cli",
     "@types/next": "catalog:",
     "@types/node": "catalog:types",
+    "@vitest/coverage-v8": "catalog:",
     "bumpp": "catalog:cli",
     "eslint": "catalog:cli",
     "lint-staged": "catalog:cli",
