--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nextjs-mcp-middleware",
   "type": "module",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
   "description": "A Next.js middleware library for handling MCP server with authorization. Provides utilities to help developers integrate MCP OAuth2-related processes into their applications",
   "author": "witsaint",
@@ -25,7 +25,7 @@
     "build-release": "unbuild",
     "dev": "unbuild --stub",
     "lint": "eslint . --cache --cache-location .cache/eslint/main.eslintcache",
-    "release": "bumpp && pnpm publish",
+    "release": "bumpp && pnpm build && pnpm publish",
     "test": "vitest run test/simple.test.ts test/comprehensive.test.ts",
     "test-unit": "vitest run test/simple.test.ts test/comprehensive.test.ts",
     "test-unit-watch": "vitest watch test/simple.test.ts test/comprehensive.test.ts --ui",
